# async_api

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
nginx/configs/: site.conf
src/: main.py
src/api/v1/: __init__.py  base.py  films.py  genres.py  models.py  persons.py  tools.py
src/core/: config.py  logger.py
src/db/: elastic.py  redis.py
src/models/: base_models.py  film.py  genre.py  person.py  response_models.py
src/services/: basic.py  films.py  genres.py  persons.py
tests/functional/: .dockerignore  .env.example  Dockerfile  config.py  conftest.py  docker-compose.yml  entrypoint.sh  requirements.txt
tests/functional/fixtures/: fill_db.py
tests/functional/src/: person.py  test_film.py  test_films.py  test_genre.py  test_person.py
tests/functional/testdata/: base.py  film.py  genre.py  genres.py  genres_data.py  movies.py  movies_data.py  person.py  persons.py
tests/functional/utils/: backoff.py  wait_for.py
